--- a/src/basic/basic.css
+++ b/src/basic/basic.css
@@ -1,3 +1,23 @@
 .listItem:hover{
     background-color: gray;
 }
+
+@media only screen and (min-width: 576px) and (max-width: 1199px) {
+.sidebar-text{
+
+    display: none;
+}
+}
+
+@media only screen and (min-width: 576px) and (max-width: 699px) {
+    sidebar-text{
+
+        display: none;
+    } 
+}
+
+@media only screen and (min-width: 700px) and (max-width: 999px) {
+    sidebar-text{
+        display: none;
+    } 
+}
