--- a/src/basic/basic.css
+++ b/src/basic/basic.css
@@ -2,22 +2,21 @@
     background-color: gray;
 }
 
-@media only screen and (min-width: 576px) and (max-width: 1199px) {
-.sidebar-text{
-
-    display: none;
-}
-}
-
-@media only screen and (min-width: 576px) and (max-width: 699px) {
-    sidebar-text{
-
+@media only screen and  (max-width: 576px) {
+    .sidebar-text, .rightIcon, .btn-avatar, .footer-icon{
         display: none;
-    } 
+    }
+}
+
+
+@media only screen and (min-width: 576px) and (max-width: 1199px) {
+    .sidebar-text, .rightIcon, .btn-avatar, .footer-icon{
+        display: none;
+    }
 }
 
 @media only screen and (min-width: 700px) and (max-width: 999px) {
-    sidebar-text{
+    .sidebar-text, .rightIcon, .btn-avatar, .footer-icon {
         display: none;
     } 
 }
